# shinigami

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  s.py  shinigami.py  t.py
.github/workflows/: CodeQL.yml  PackagePublish.yml  PackageTest.yml
docs/: index.md
localize/: shinigami-local.py
shinigami/: __init__.py  app.py  cli.py  defaults.py  main.py  settings.py  utils.py
tests/: test_check_ignore_node.py  test_shell_command_to_list.py  test_temp.py  test_utils.py
tests/app/: test_shell_command_to_list.py
tests/cli/: test_application.py  test_base_parser.py  test_parser.py
tests/defaults/: test_defaults.py
tests/settings/: test_settings.py
tests/utils/: test_exclude_active_slurm_users.py  test_filter_orphaned_processes.py  test_get_nodes.py  test_get_remote_processes.py  test_id_in_whitelist.py  test_include_orphaned_processes.py  test_include_user_whitelist.py  test_placeholder.py  test_shell_command_to_list.py
