[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shinigami"
version = "0.0.0"  # Version is set dynamically by the CI tool on publication
authors = ["Pitt Center for Research Computing", ]
readme = "README.md"
description = "Automatic email notification tool for disk quota usage."
homepage = "https://github.com/pitt-crc/shinigami"
repository = "https://github.com/pitt-crc/shinigami"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = "*"
