[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shinigami"
version = "0.0.0"
authors = ["Pitt Center for Research Computing", ]
readme = "README.md"
homepage = "https://github.com/pitt-crc/shinigami"
repository = "https://github.com/pitt-crc/shinigami"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = "*"
