[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shinigami"
version = "0.0.0"  # Version is set dynamically by the CI tool on publication
authors = ["Pitt Center for Research Computing", ]
readme = "README.md"
description = "A stand alone Python application for killing errant processes on Slurm based compute nodes."
homepage = "https://github.com/pitt-crc/shinigami"
repository = "https://github.com/pitt-crc/shinigami"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = "*"
